fixed z-index bugging on chrome

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ a:hover {
   align-items: center;
   -webkit-transition: all .5s ease-out;
   transition: all .5s ease-out;
-  z-index: -10;
   padding: 20px; }
   #splashText h1 {
     margin: 0;
